<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#fef9cc"
    tools:context="com.example.anna.sniffin_sticks.patient_data">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_ok"
        android:id="@+id/data_ok"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/data_title"
        android:textSize="20dp"
        android:textStyle="bold"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/data_name"
        android:ems="10"
        android:id="@+id/data_name"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/data_surname"
        android:hint="BLABLABL" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/data_surname"
        android:ems="10"
        android:id="@+id/data_surname"
        android:layout_below="@+id/data_name"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/data_birth" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/data_birth"
        android:layout_below="@+id/data_surname"
        android:layout_alignParentStart="true"
        android:text="@string/data_birth"
        android:layout_alignEnd="@+id/data_sex" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/data_sex"
        android:layout_below="@+id/data_birth"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/data_sex" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/data_researcher"
        android:ems="10"
        android:id="@+id/data_researcher"
        android:layout_below="@+id/data_sex"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/data_date"
        android:layout_below="@+id/data_researcher"
        android:layout_alignParentStart="true"
        android:text="@string/data_date"
        android:layout_alignEnd="@+id/data_researcher" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/data_hour"
        android:layout_below="@+id/data_date"
        android:layout_alignParentStart="true"
        android:text="@string/data_hour"
        android:layout_alignEnd="@+id/data_date" />
</RelativeLayout>
