<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#fef9cc"
    tools:context="com.example.anna.sniffin_sticks.select_test">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_title"
        android:textSize="40dp"
        android:textStyle="bold"
        android:id="@+id/select_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:text="@string/select_button_test1"
        android:id="@+id/select_button_test1"
        android:textSize="30dp"
        android:layout_below="@+id/select_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_color" />

    <Button
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:text="@string/select_button_test2"
        android:id="@+id/select_button_test2"
        android:textSize="30dp"
        android:layout_below="@+id/select_button_test1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_color"
        android:layout_marginTop="14dp"/>

    <Button
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:text="@string/select_button_test3"
        android:id="@+id/select_button_test3"
        android:textSize="30dp"
        android:layout_below="@+id/select_button_test2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_color"
        android:layout_marginTop="14dp"/>

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/select_button_export"
        android:id="@+id/select_button_export"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#e6be39" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/select_button_reset"
        android:id="@+id/select_button_reset"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="#e6be39" />

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/select_button_score"
        android:textSize="30dp"
        android:id="@+id/select_button_score"
        android:background="#e6be39"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/select_button_test3"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
