<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.anna.sniffin_sticks.test_discrimination"
    android:background="#fef9cc">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testDIS_counter"
        android:textSize="30sp"
        android:id="@+id/testDIS_counter"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/testDIS_ok"
        android:text="@string/testDIS_ok"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/testDIS_counter"
        android:layout_marginTop="45dp"
        android:layout_alignParentStart="true"
        android:id="@+id/testDIS_radiogroup"
        android:textSize="30sp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testDIS_blue"
            android:id="@+id/testDIS_blue"
            android:checked="false"
            android:textSize="30sp"
            android:textColor="#0909da" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testDIS_green"
            android:id="@+id/testDIS_green"
            android:checked="false"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:textColor="#09dd05" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testDIS_red"
            android:id="@+id/testDIS_red"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:textSize="30sp"
            android:textColor="#fb0606" />

    </RadioGroup>
</RelativeLayout>
