<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#fef9cc"
    tools:context="com.example.anna.sniffin_sticks.test_threshold">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/testTHR_title"
        android:textSize="45sp"
        android:id="@+id/testTHR_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testTHR_button_ok"
        android:textSize="45sp"
        android:id="@+id/testTHR_button_ok"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_above="@+id/testTHR_button_ok"
        android:id="@+id/testTHR_radioGroup"
        android:layout_centerInParent="true">

        <View
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:text="@string/testTHR_button_yes"
            android:id="@+id/testTHR_button_yes"
            android:checked="false"
            android:textSize="45sp"
            android:layout_gravity="center"
            android:gravity="center" />


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/testTHR_button_no"
            android:id="@+id/testTHR_button_no"
            android:checked="false"
            android:textSize="45sp"
            android:layout_gravity="center"
            android:gravity="center" />

        <View
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </RadioGroup>
</RelativeLayout>
